cmake_minimum_required(VERSION 4.0)
project(Workspace)

set(CMAKE_CXX_STANDARD 26)

add_executable(Workspace main.cpp
        Course/course2.cpp
        Course/course2.h
        Course/course1.cpp
        Course/course1.h
        Lab/lab2.cpp
        Lab/lab2.h
        Lab/lab2.cpp
        Lab/lab3.cpp
        Lab/lab3.h
        Lab/lab4.cpp
        Lab/lab4.h
        Lab/lab4.cpp
        Lab/lab4.h
        main.cpp)
